--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obys Agency</title>
     <link rel="shortcut icon" href="/Favicon/FavIconLogo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="crsr"></div>
     <div id="loader">
         <div class="line">
             <div id="line1-part1">
@@ -28,8 +29,12 @@
             <h2>Now</h2>
         </div>
     </div>
+
+    <div id="crsr"></div>
     <div id="main">
-        <div id="page1">
+
+        <div id="crsr"></div>
+        <div id="page1" data-scroll data-scroll-speed="-2">
             <div id="nav">
                 <svg class="brand__svg" width="71" height="27" viewBox="0 0 71 27">
                     <path
@@ -71,32 +76,171 @@
                 </div>
 
             </div>
-            <div class="hero">
+            <div class="hero" id="hero-1">
                 <h1>We desgin</h1>
             </div>
 
-            <div class="hero">
+            <div class="hero" id="hero-2">
                 <h1>Unique</h1>
             </div>
 
-            <div class="hero">
-                <h1>Web/Graphic</h1>
+            <div class="hero" id="hero-3">
+                <h1>
+                    <h2>Web/</h2>
+                    <h2>Graphics</h2>
+                </h1>
             </div>
-            <div class="hero">
+            <div class="hero" id="hero-4">
                 <h1>Experience</h1>
             </div>
         </div>
-        <div id="page2"></div>
-        <div id="page3"></div>
+        <div id="page2" data-scroll data-scroll-speed="-2">
+            <div id="video-container">
+                <div id="video-cursor"><i class="ri-play-mini-fill"></i></div>
+                <img src="/img/Showreel-2022-preview-1.jpg" alt="">
+                <video autoplay loop muted src="/Video/Obys-Showreel-2022.mp4"></video>
+            </div>
+        </div>
+        <div id="page3" data-scroll></div>
+        <div id="page4" data-scroll>
+
+            <div id="page4-content">
+                <h1>About Obys</h1>
+                <div class="underline"></div>
+                <p>Our agency is about people who
+
+                    love
+                    creating,
+                    designing
+                    and
+
+                    developing
+                    wow
+                    projects.
+                    In
+                    the
+
+                    same
+                    time
+                    we
+                    are
+                    a
+                    boutique
+
+                    agency
+                    that
+                    is
+                    more
+                    than
+                    the
+
+                    collective.
+                    We
+                    learn
+                    and
+                    grow,
+                    win
+
+                    and
+                    celebrate
+                    together.</p>
+                <div id="page4-flex">
+                    <img src="/img/about-image01.jpg" alt="">
+                    <p>We are happy to present our new website and updated version of Obys agency. As before we are open
+                        for new projects worldwide!
+                        <br><br>
+                        Would you like to have award winning site or unique branding style, please say hi to our manager
+                        —info@obys.agency.
+                        And we will help you with the pleasure.
+                    </p>
+                </div>
+                <div id="page4-blue-div">
+                    <div class="blue-div-elem">
+                        <h4>Awwards x16</h4>
+                        <p>SOTM,SOTD and Honrable Mentions</p>
+                    </div>
+                    <div class="blue-div-elem">
+                        <h4>Red Dot Award x1</h4>
+                        <p>Best of the Best</p>
+                    </div>
+                    <div class="blue-div-elem">
+                        <h4>FWA x11</h4>
+                        <p>FWA of The Day</p>
+                    </div>
+                    <div class="blue-div-elem">
+                        <h4>CSSDA x23</h4>
+                        <p>WOTM, WOTD and UI, UX, Innovation</p>
+                    </div>
+                    <div class="blue-div-elem">
+                        <h4>Behance x25</h4>
+                        <p>Interaction, Graphic Design</p>
+                    </div>
+                </div>
+                <div class="underline"></div>
+            </div>
+        </div>
+        <div id="page5" data-scroll>
+            <div class="elem">
+                <h1> <span>Sports</span> - Technology - Fashion - </h1>
+                <h1> <span>Sports</span> - Technology - Fashion - </h1>
+            </div>
+            <div class="elem2">
+                <h1> <span>Beauty</span> - Architecture - Real Estate -</h1>
+                <h1> <span>Beauty</span> - Architecture - Real Estate -</h1>
+            </div>
+            <div class="elem">
+
+                <h1>science - partners - <span>travel</span> -</h1>
+                <h1>science - partners - <span>travel</span> -</h1>
+            </div>
+            <div class="elem2">
+                <h1> <span>music</span> - hotels - automotive -</h1>
+                <h1> <span>music</span> - hotels - automotive -</h1>
+            </div>
+        </div>
+        <div id="footer" data-scroll>
+            <h1>Let 's Create <i class="ri-arrow-right-line"></i></h1>
+            <div class="underline"></div>
+            <div id="footer-div">
+                <div class="box">
+                    <h6>Socials</h6>
+                    <br>
+                    <h5>Dribbble</h5>
+                    <h5>Behance</h5>
+                    <h5>Instagram</h5>
+                    <h5>Facebook</h5>
+                    <h5>Twitter</h5>
+                    <h5>YouTube</h5>
+                </div>
+                <div class="box">
+                    <h6>Address</h6>
+                    <br>
+                    <h5>Zamarstynivska 55
+                        79019 Lviv
+                        Ukraine</h5>
+                </div>
+                <div class="box">
+                    <h6>Say Hi!</h6>
+                    <br>
+                    <h5>info@obys.agency</h5>
+                </div>
+            </div>
+            <div class="underline"></div>
+            <h5>Obys Agency © 2024</h5>
+        </div>
     </div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/gh/aayushchouhan24/sheryjs@main/dist/Shery.js"></script>
+    <!-- <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script> -->
     <script src="script.js"></script>
 </body>
 
