add flag animation

--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
             <div class="hero" id="hero-4">
                 <h1>Experience</h1>
             </div>
+            <img id="flag" src="/img/Flag.jpg" alt="">
         </div>
         <div id="page2" data-scroll data-scroll-speed="-2">
             <div id="video-container">
                 <div id="video-cursor">
                     <i class="ri-play-mini-fill"></i>
                 </div>
-                <video autoplay loop  src="/Video/Obys-Showreel-2022.mp4"></video>
+                <video autoplay loop src="/Video/Obys-Showreel-2022.mp4"></video>
             </div>
         </div>
         <div id="page3" data-scroll data-scroll-speed="-2">
