--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/aayushchouhan24/sheryjs@main/dist/Shery.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -87,7 +88,7 @@
             <div class="hero" id="hero-3">
                 <h1>
                     <h2>Web/</h2>
-                    <h2>Graphics</h2>
+                    <h2>Graphic</h2>
                 </h1>
             </div>
             <div class="hero" id="hero-4">
@@ -100,7 +101,7 @@
                 <div id="video-cursor">
                     <i class="ri-play-mini-fill"></i>
                 </div>
-                <video autoplay loop src="/Video/Obys-Showreel-2022.mp4"></video>
+                <video loop src="/Video/Obys-Showreel-2022.mp4"></video>
             </div>
         </div>
         <div id="page3" data-scroll data-scroll-speed="-2">
@@ -189,7 +190,7 @@
                     celebrate
                     together.</p>
                 <div id="page4-flex">
-                    <img src="/img/about-image01.jpg" alt="">
+                    <img src="/img/about-image01.png" alt="">
                     <p>We are happy to present our new website and updated version of Obys agency. As before we are open
                         for new projects worldwide!
                         <br><br>
@@ -286,6 +287,14 @@
     <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/gh/aayushchouhan24/sheryjs@main/dist/Shery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"
+        integrity="sha512-VJ/iYbiu1eJ6yLimfTi65t2R9TFcG5D9X8ZCfbbEFhTfPnKJh8byoKXEawi5ScJZBYL1eiirL1+MczZDx0Tz9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="
+        https://cdn.jsdelivr.net/npm/textillate@0.4.1/jquery.textillate.min.js
+        "></script>
     <script src="script.js"></script>
 </body>
 
