--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
             <div class="hero" id="hero-4">
                 <h1>Experience</h1>
             </div>
-            <img id="flag" src="/img/Flag.jpg" alt="">
+            <img id="flag" src="./img/Flag.jpg" alt="">
         </div>
         <div id="page2" data-scroll data-scroll-speed="-2">
             <div id="video-container">
                 <div id="video-cursor">
                     <i class="ri-play-mini-fill"></i>
                 </div>
-                <video autoplay loop src="/Video/Obys-Showreel-2022.mp4"></video>
+                <video autoplay loop src="./Video/Obys-Showreel-2022.mp4"></video>
             </div>
         </div>
         <div id="page3" data-scroll data-scroll-speed="-2">
@@ -108,12 +108,12 @@
             <div class="underline"></div>
             <div id="image-div-container">
                 <div class="image-div">
-                    <img src="/img/Olga_Prudka_1.png" alt="">
-                    <img src="/img/Olga_Prudka_2.png" alt="">
+                    <img src="./img/Olga_Prudka_1.png" alt="">
+                    <img src="./img/Olga_Prudka_2.png" alt="">
                 </div>
                 <div class="image-div">
-                    <img src="/img/AIM-2.png" alt="">
-                    <img src="/img/AIM-1.png" alt="">
+                    <img src="./img/AIM-2.png" alt="">
+                    <img src="./img/AIM-1.png" alt="">
                 </div>
                 <div class="page3-circle1">
                     <svg class="button__arrow" viewBox="0 0 91 118" fill="none">
@@ -137,12 +137,12 @@
                     </div>
                 </div>
                 <div class="image-div">
-                    <img src="/img/OCHI.png" alt="">
-                    <img src="/img/OCHI_2-1.png" alt="">
+                    <img src="./img/OCHI.png" alt="">
+                    <img src="./img/OCHI_2-1.png" alt="">
                 </div>
                 <div class="image-div">
-                    <img src="/img/Laxer_1-2.png" alt="">
-                    <img src="/img/Laxer_2.png" alt="">
+                    <img src="./img/Laxer_1-2.png" alt="">
+                    <img src="./img/Laxer_2.png" alt="">
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
                     celebrate
                     together.</p>
                 <div id="page4-flex">
-                    <img src="/img/about-image01.jpg" alt="">
+                    <img src="./img/about-image01.jpg" alt="">
                     <p>We are happy to present our new website and updated version of Obys agency. As before we are open
                         for new projects worldwide!
                         <br><br>
