--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="hero" id="hero-4">
                 <h1>Experience</h1>
             </div>
-            <img id="flag" src="./img/Flag.jpg" alt="">
+            <img id="flag" src="../img/Flag.jpg" alt="">
         </div>
         <div id="page2" data-scroll data-scroll-speed="-2">
             <div id="video-container">
