--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
             <div class="hero" id="hero-4">
                 <h1>Experience</h1>
             </div>
-            <img id="flag" src="/img/Flag.jpg" alt="">
+            <img id="flag" src="./img/Flag.jpg" alt="">
         </div>
         <div id="page2" data-scroll data-scroll-speed="-2">
             <div id="video-container">
                 <div id="video-cursor">
                     <i class="ri-play-mini-fill"></i>
                 </div>
-                <video loop src="/Video/Obys-Showreel-2022.mp4"></video>
+                <video loop src="./Video/Obys-Showreel-2022.mp4"></video>
             </div>
         </div>
         <div id="page3" data-scroll data-scroll-speed="-2">
@@ -109,8 +109,8 @@
             <div class="underline"></div>
             <div id="image-div-container">
                 <div class="image-div">
-                    <img src="/img/Olga_Prudka_1.png" alt="">
-                    <img src="/img/Olga_Prudka_2.png" alt="">
+                    <img src="./img/Olga_Prudka_1.png" alt="">
+                    <img src="./img/Olga_Prudka_2.png" alt="">
                 </div>
                 <div class="image-div">
                     <img src="/img/AIM-2.png" alt="">
@@ -190,7 +190,7 @@
                     celebrate
                     together.</p>
                 <div id="page4-flex">
-                    <img src="/img/about-image01.png" alt="">
+                    <img src="./img/about-image01.png" alt="">
                     <p>We are happy to present our new website and updated version of Obys agency. As before we are open
                         for new projects worldwide!
                         <br><br>
