--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     <img src="./img/Olga_Prudka_2.png" alt="">
                 </div>
                 <div class="image-div">
-                    <img src="/img/AIM-2.png" alt="">
-                    <img src="/img/AIM-1.png" alt="">
+                    <img src="./img/AIM-2.png" alt="">
+                    <img src="./img/AIM-1.png" alt="">
                 </div>
                 <div class="page3-circle1">
                     <svg class="button__arrow" viewBox="0 0 91 118" fill="none">
