--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                     </div>
                 </div>
                 <div class="image-div">
-                    <img src="/img/OCHI.png" alt="">
-                    <img src="/img/OCHI_2-1.png" alt="">
+                    <img src="./img/OCHI.png" alt="">
+                    <img src="./img/OCHI_2-1.png" alt="">
                 </div>
                 <div class="image-div">
-                    <img src="/img/Laxer_1-2.png" alt="">
-                    <img src="/img/Laxer_2.png" alt="">
+                    <img src="./img/Laxer_1-2.png" alt="">
+                    <img src="./img/Laxer_2.png" alt="">
                 </div>
             </div>
         </div>
